feat: 평균 득, 실, 실책, 안타, 피안타 조회 기능 구현

--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -8,6 +8,10 @@
         <variable
             name="myStatsUiModel"
             type="com.yagubogu.presentation.stats.my.MyStatsUiModel" />
+
+        <variable
+            name="myAverageStats"
+            type="com.yagubogu.presentation.stats.my.MyAverageStats" />
     </data>
 
     <ScrollView
@@ -308,7 +312,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:text="6.5점"
+                    android:text="@{@string/stats_average_score(myAverageStats.averageRun)}"
                     app:layout_constraintEnd_toStartOf="@id/tv_loss_score"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_gain_score_emoji"
@@ -353,7 +357,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:text="2.2점"
+                    android:text="@{@string/stats_average_score(myAverageStats.concededRuns)}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_gain_score"
                     app:layout_constraintTop_toBottomOf="@id/tv_loss_score_emoji"
@@ -378,7 +382,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:gravity="center"
-                    android:text="8.6개"
+                    android:text="@{@string/stats_average_count(myAverageStats.averageHits)}"
                     app:layout_constraintEnd_toStartOf="@id/tv_hit_allowed_count"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_gain_score_text"
@@ -412,7 +416,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="6.2개"
+                    android:text="@{@string/stats_average_count(myAverageStats.concededHits)}"
                     app:layout_constraintEnd_toStartOf="@id/tv_error_count"
                     app:layout_constraintStart_toEndOf="@id/tv_hit_count"
                     app:layout_constraintTop_toTopOf="@id/tv_hit_count"
@@ -446,7 +450,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="1.4개"
+                    android:text="@{@string/stats_average_count(myAverageStats.averageErrors)}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_hit_allowed_count"
                     app:layout_constraintTop_toBottomOf="@id/tv_gain_score_text"
