--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -214,19 +214,10 @@
                     android:id="@+id/rv_stadium_fan_rate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_marginTop="20dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toTopOf="@id/constraint_show_more"
                     app:layout_constraintTop_toBottomOf="@id/tv_stadium_stats_title" />
-
-                <!--                <include-->
-                <!--                    android:id="@+id/layout_stadium_chart_bar"-->
-                <!--                    layout="@layout/item_stadium_chart_bar"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:layout_margin="20dp"-->
-                <!--                    app:layout_constraintBottom_toTopOf="@id/constraint_show_more"-->
-                <!--                    app:layout_constraintTop_toBottomOf="@id/tv_stadium_stats_title" />-->
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraint_show_more"
