--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,10 @@
         <import type="android.view.View" />
 
         <variable
+            name="viewModel"
+            type="com.yagubogu.presentation.home.HomeViewModel" />
+
+        <variable
             name="homeUiModel"
             type="com.yagubogu.presentation.home.model.HomeUiModel" />
 
@@ -225,6 +229,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:background="@drawable/bg_stroke_gray300_radius_12dp"
+                    android:onClick="@{() -> viewModel.toggleStadiumStats()}"
                     android:paddingVertical="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_stadium_fan_rate">
@@ -235,7 +240,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="4dp"
-                        android:text="@string/home_show_more"
+                        android:text="@{viewModel.isStadiumStatsExpanded ? @string/home_show_less : @string/home_show_more}"
                         android:textColor="@color/gray400"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -248,7 +253,7 @@
                         android:id="@+id/iv_arrow"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/ic_arrow_down"
+                        android:src="@{viewModel.isStadiumStatsExpanded ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/tv_show_more"
