--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -10,14 +10,6 @@
         <variable
             name="viewModel"
             type="com.yagubogu.presentation.home.HomeViewModel" />
-
-        <variable
-            name="homeUiModel"
-            type="com.yagubogu.presentation.home.model.HomeUiModel" />
-
-        <variable
-            name="stadiumStatsUiModel"
-            type="com.yagubogu.presentation.home.model.StadiumStatsUiModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -77,7 +69,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{homeUiModel.myTeam}"
+                    android:text="@{viewModel.homeUiModel.myTeam}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +104,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(homeUiModel.attendanceCount)}"
+                    android:text="@{String.valueOf(viewModel.homeUiModel.attendanceCount)}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +140,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{@string/all_rounded_win_rate(homeUiModel.winRate)}"
+                    android:text="@{@string/all_rounded_win_rate(viewModel.homeUiModel.winRate)}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -195,7 +187,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
-                    android:text="@{@string/home_stadium_stats_refresh_time(stadiumStatsUiModel.refreshTime.hour, stadiumStatsUiModel.refreshTime.minute)}"
+                    android:text="@{@string/home_stadium_stats_refresh_time(viewModel.stadiumStatsUiModel.refreshTime.hour, viewModel.stadiumStatsUiModel.refreshTime.minute)}"
                     android:textColor="@color/gray400"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@id/tv_stadium_stats_title"
