--- a/android/app/src/main/res/layout/item_livetalk_my_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_my_bubble.xml
@@ -39,8 +39,8 @@
             android:textColor="@color/primary700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_chat_body"
-            app:timeAgo="@{livetalkChatItem.timestamp}"
-            tools:text="1시간 25분 전" />
+            app:timeStamp="@{livetalkChatItem.timestamp}"
+            tools:text="오후 01:25" />
 
         <ImageView
             android:id="@+id/iv_trash_icon"
