--- a/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
@@ -91,10 +91,10 @@
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_marginEnd="4dp"
-            android:contentDescription="신고 깃발 아이콘"
+            android:contentDescription="@string/livetalk_user_report_icon_description"
             android:src="@drawable/ic_flag"
             app:layout_constraintBottom_toBottomOf="@id/tv_chat_write_time"
-            app:layout_constraintStart_toStartOf="@id/tv_report_user"
+            app:layout_constraintEnd_toStartOf="@id/tv_report_user"
             app:layout_constraintTop_toTopOf="@id/tv_chat_write_time"
             app:tint="@color/gray500" />
 
@@ -104,8 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
-            android:paddingStart="18dp"
-            android:text="신고"
+            android:text="@string/livetalk_user_report_btn"
             android:textColor="@color/gray500"
             app:layout_constraintBottom_toBottomOf="@id/tv_chat_write_time"
             app:layout_constraintEnd_toEndOf="parent"
