--- a/android/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/android/app/src/main/res/layout/fragment_attendance_history.xml
@@ -50,6 +50,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_attendance_history_title" />
 
         <TextView
+            android:id="@+id/tv_empty_history"
             style="@style/TextView.Pretendard.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,7 +59,7 @@
             android:text="@string/stats_empty_attendance_history_description"
             android:textColor="@color/gray400"
             android:textSize="18sp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
