--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{viewModel.memberInfoUiModel.myTeam}"
+                    android:text="@{viewModel.memberStatsUiModel.myTeam}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(viewModel.memberInfoUiModel.attendanceCount)}"
+                    android:text="@{String.valueOf(viewModel.memberStatsUiModel.attendanceCount)}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
                     style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{@string/all_rounded_win_rate(viewModel.memberInfoUiModel.winRate)}"
+                    android:text="@{@string/all_rounded_win_rate(viewModel.memberStatsUiModel.winRate)}"
                     android:textColor="@color/primary700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
