feat: 승리요정 프로필 이미지 DataBinding 적용

--- a/android/app/src/main/res/layout/item_victory_fairy.xml
+++ b/android/app/src/main/res/layout/item_victory_fairy.xml
@@ -41,6 +41,7 @@
             app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button"
             app:strokeColor="@color/gray300"
             app:strokeWidth="1dp"
+            app:userProfileImage="@{victoryFairyItem.profileImageUrl}"
             tools:src="@drawable/ic_launcher_background" />
 
         <TextView
