feat: 인증된 사용자만 현장톡 입력 가능하도록 수정

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -101,8 +101,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:enabled="@{viewmodel.isVerified}"
                 android:gravity="center_vertical"
-                android:hint="@{@string/livetalk_chat_input_hint(viewmodel.livetalkResponseItem.stadiumName)}"
+                android:hint="@{viewmodel.isVerified? @string/livetalk_chat_input_hint(viewmodel.livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:maxLines="4"
@@ -125,9 +126,8 @@
             android:layout_height="40dp"
             android:layout_marginVertical="16dp"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/bg_primary500_radius_12dp_ripple"
-            android:clickable="true"
-            android:focusable="true"
+            android:background="@{viewmodel.isVerified ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
+            android:enabled="@{viewmodel.isVerified}"
             android:onClick="@{() -> viewmodel.sendMessage()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -138,7 +138,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:contentDescription="@string/livetalk_send_btn_description"
-                android:src="@drawable/ic_send"
+                android:src="@{viewmodel.isVerified ? @drawable/ic_send : @drawable/ic_lock}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
