--- a/android/app/src/main/res/layout/item_victory_fairy.xml
+++ b/android/app/src/main/res/layout/item_victory_fairy.xml
@@ -42,7 +42,7 @@
             app:strokeColor="@color/gray300"
             app:strokeWidth="1dp"
             app:userProfileImage="@{victoryFairyItem.profileImageUrl}"
-            tools:src="@drawable/ic_launcher_background" />
+            tools:src="@drawable/ic_user" />
 
         <TextView
             android:id="@+id/tv_nickname"
