--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -3,64 +3,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_activity_main_root"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray050"
         tools:context=".presentation.MainActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_activity_main_root"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:contentInsetEnd="30dp"
-            app:contentInsetStart="30dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            android:background="@color/gray050"
+            tools:context=".presentation.MainActivity">
 
-            <TextView
-                android:id="@+id/tv_toolbar_title"
-                style="@style/TextView.Esamanru.Medium.24"
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:contentInsetEnd="30dp"
+                app:contentInsetStart="30dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/tv_toolbar_title"
+                    style="@style/TextView.Esamanru.Medium.24"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="@string/app_name" />
+
+                <ImageView
+                    android:id="@+id/iv_settings"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:src="@drawable/ic_settings" />
+            </androidx.appcompat.widget.Toolbar>
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fcv_fragment"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/bnv_navigation"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bnv_navigation"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                tools:text="@string/app_name" />
+                android:background="@color/white"
+                app:itemActiveIndicatorStyle="@android:color/transparent"
+                app:itemBackground="@android:color/transparent"
+                app:itemIconSize="24dp"
+                app:itemIconTint="@color/color_bottom_navigation"
+                app:itemPaddingBottom="24dp"
+                app:itemRippleColor="@android:color/transparent"
+                app:itemTextAppearanceActive="@style/TextView.Pretendard.SemiBold.12"
+                app:itemTextAppearanceInactive="@style/TextView.Pretendard.SemiBold.12"
+                app:itemTextColor="@color/color_bottom_navigation"
+                app:labelVisibilityMode="labeled"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:menu="@menu/menu_bottom_navigation" />
 
-            <ImageView
-                android:id="@+id/iv_settings"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical|end"
-                android:src="@drawable/ic_settings" />
-        </androidx.appcompat.widget.Toolbar>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fcv_fragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/bnv_navigation"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        <View
+            android:id="@+id/view_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/gray_overlay"
+            android:visibility="gone" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnv_navigation"
-            android:layout_width="0dp"
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/cpi_checkIn_loading"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:itemActiveIndicatorStyle="@android:color/transparent"
-            app:itemBackground="@android:color/transparent"
-            app:itemIconSize="24dp"
-            app:itemIconTint="@color/color_bottom_navigation"
-            app:itemPaddingBottom="24dp"
-            app:itemRippleColor="@android:color/transparent"
-            app:itemTextAppearanceActive="@style/TextView.Pretendard.SemiBold.12"
-            app:itemTextAppearanceInactive="@style/TextView.Pretendard.SemiBold.12"
-            app:itemTextColor="@color/color_bottom_navigation"
-            app:labelVisibilityMode="labeled"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/menu_bottom_navigation" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone" />
+    </FrameLayout>
 </layout>
