--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="favoriteTeamUiModel"
-            type="com.yagubogu.presentation.favorite.FavoriteTeamUiModel" />
+            name="favoriteTeamItem"
+            type="com.yagubogu.presentation.favorite.FavoriteTeamItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +31,7 @@
             android:id="@+id/tv_favorite_team_emoji"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{favoriteTeamUiModel.emoji}"
+            android:text="@{favoriteTeamItem.emoji}"
             android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@id/tv_favorite_team_name"
             app:layout_constraintEnd_toEndOf="@id/tv_selection_confirm_message"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
-            android:text="@{favoriteTeamUiModel.name}"
+            android:text="@{favoriteTeamItem.team.nickname}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_favorite_team_emoji"
