--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="viewmodel"
+            name="viewModel"
             type="com.yagubogu.presentation.livetalk.chat.LivetalkChatViewModel" />
 
         <variable
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@{viewmodel.livetalkResponseItem.stadiumName}"
+            android:text="@{viewModel.livetalkResponseItem.stadiumName}"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="@{@string/livetalk_away_home_name(viewmodel.livetalkResponseItem.awayTeamName, viewmodel.livetalkResponseItem.homeTeamName)}"
+            android:text="@{@string/livetalk_away_home_name(viewModel.livetalkResponseItem.awayTeamName, viewModel.livetalkResponseItem.homeTeamName)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_stadium_name"
@@ -107,13 +107,13 @@
                 android:background="@null"
                 android:enabled="@{isVerified}"
                 android:gravity="center_vertical"
-                android:hint="@{isVerified? @string/livetalk_chat_input_hint(viewmodel.livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
+                android:hint="@{isVerified? @string/livetalk_chat_input_hint(viewModel.livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:maxLines="4"
                 android:minHeight="16dp"
                 android:scrollHorizontally="false"
-                android:text="@={viewmodel.messageFormText}"
+                android:text="@={viewModel.messageFormText}"
                 android:textColor="@color/gray900"
                 android:textColorHint="@color/gray500"
                 android:textSize="16sp"
@@ -132,7 +132,7 @@
             android:layout_marginEnd="20dp"
             android:background="@{isVerified ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
             android:enabled="@{isVerified}"
-            android:onClick="@{() -> viewmodel.sendMessage()}"
+            android:onClick="@{() -> viewModel.sendMessage()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/constraint_input_message">
