--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -58,6 +58,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="TextView.Pretendard.SemiBold.24" parent="TextView.Pretendard.SemiBold">
+        <item name="android:textSize">24sp</item>
+    </style>
+
     <style name="TextView.Pretendard.Bold" parent="TextView.Pretendard">
         <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:textColor">@color/black</item>
@@ -90,6 +94,10 @@
     <style name="TextView.Esamanru.Medium" parent="TextView.Esamanru">
         <item name="android:fontFamily">@font/esamanru_medium</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TextView.Esamanru.Medium.16" parent="TextView.Esamanru.Medium">
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="TextView.Esamanru.Medium.20" parent="TextView.Esamanru.Medium">
