feat: 오픈소스 라이선스 고지 라이브러리 적용

--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -75,6 +75,7 @@
                         app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Button"
                         app:strokeColor="@color/gray300"
                         app:strokeWidth="1dp"
+                        app:userProfileImage="@{`https://avatars.githubusercontent.com/u/66577?v=4`}"
                         tools:src="@drawable/ic_users" />
 
                     <TextView
