--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -118,6 +118,7 @@
                         layout="@layout/item_setting_menu"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        app:additionalInfo="@{viewModel.favoriteTeam}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
